Scanner_Parser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    TRIANGLE
    SQRB_OPEN
    YELLOW
    GREEN
    EIF
    CYAN
    LINE
    RED
    POLYGON
    COMMENT
    GRAY
    POINT
    PURPLE
    SQRB_CLOSE
    COMMA
    ORANGE
    BLOCK_COMMENT
    PINK
    DRAW
    SQUARE
    ELSE
    FUNC
    INPUT
    WHITE
    MAGENTA
    RECTANGLE
    IF
    BLUE
    BLACK
    CIRCLE

Grammar

Rule 0     S' -> Obi
Rule 1     Obi -> Play
Rule 2     Play -> PLAY Play_Init PAR_OPEN PAR_CLOSE Statements_Block
Rule 3     Play_Init -> <empty>
Rule 4     Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE
Rule 5     Multiple_Statements -> Statement Multiple_Statements
Rule 6     Multiple_Statements -> Epsilon
Rule 7     Statement -> Print
Rule 8     Statement -> Declare_Var
Rule 9     Statement -> Assignment
Rule 10    Statement -> While_Loop
Rule 11    Print -> PRINT PAR_OPEN Exp PAR_CLOSE SEMICOLON
Rule 12    While_Loop -> WHILE Push_While_Jump PAR_OPEN Exp PAR_CLOSE While_Quad Statements_Block Fill_While_Quads
Rule 13    Push_While_Jump -> <empty>
Rule 14    While_Quad -> <empty>
Rule 15    Fill_While_Quads -> <empty>
Rule 16    Declare_Var -> Type ID SEMICOLON
Rule 17    Declare_Var -> Type ID ASSIGN Push_Assign Exp SEMICOLON
Rule 18    Type -> INT
Rule 19    Type -> FLOAT
Rule 20    Type -> BOOL
Rule 21    Type -> STRING
Rule 22    Assignment -> ID ASSIGN Push_Assign Exp SEMICOLON
Rule 23    Push_Assign -> <empty>
Rule 24    Exp -> Logical_Or
Rule 25    Exp -> Logical_Or EQUAL Push_Equal Logical_Or Equity_Quad
Rule 26    Exp -> Logical_Or DIFF Push_Diff Logical_Or Equity_Quad
Rule 27    Equity_Quad -> <empty>
Rule 28    Push_Equal -> <empty>
Rule 29    Push_Diff -> <empty>
Rule 30    Logical_Or -> Logical_And Or_Quad Multiple_Ands
Rule 31    Multiple_Ands -> OR Push_Or Logical_And Or_Quad Multiple_Ands
Rule 32    Multiple_Ands -> Epsilon
Rule 33    Or_Quad -> <empty>
Rule 34    Push_Or -> <empty>
Rule 35    Logical_And -> Logical_Not And_Quad Multiple_Nots
Rule 36    Multiple_Nots -> AND Push_And Logical_Not And_Quad Multiple_Nots
Rule 37    Multiple_Nots -> Epsilon
Rule 38    And_Quad -> <empty>
Rule 39    Push_And -> <empty>
Rule 40    Logical_Not -> Relational
Rule 41    Logical_Not -> NOT Push_Not Relational Not_Quad
Rule 42    Not_Quad -> <empty>
Rule 43    Push_Not -> <empty>
Rule 44    Relational -> Expression
Rule 45    Relational -> Expression LESS Push_Less Expression Relational_Quad
Rule 46    Relational -> Expression LESS_EQUAL Push_Less_Equal Expression Relational_Quad
Rule 47    Relational -> Expression GREATER Push_Greater Expression Relational_Quad
Rule 48    Relational -> Expression GREATER_EQUAL Push_Greater_Equal Expression Relational_Quad
Rule 49    Relational_Quad -> <empty>
Rule 50    Push_Less -> <empty>
Rule 51    Push_Less_Equal -> <empty>
Rule 52    Push_Greater -> <empty>
Rule 53    Push_Greater_Equal -> <empty>
Rule 54    Expression -> Term Sum_Sub_Quad Multiple_Terms
Rule 55    Multiple_Terms -> PLUS_SIGN Push_Plus_Sign Term Sum_Sub_Quad Multiple_Terms
Rule 56    Multiple_Terms -> MINUS_SIGN Push_Minus_Sign Term Sum_Sub_Quad Multiple_Terms
Rule 57    Multiple_Terms -> Epsilon
Rule 58    Sum_Sub_Quad -> <empty>
Rule 59    Push_Plus_Sign -> <empty>
Rule 60    Push_Minus_Sign -> <empty>
Rule 61    Term -> Factor Mult_Div_Mod_Quad Multiple_Factors
Rule 62    Multiple_Factors -> TIMES_SIGN Push_Times_Sign Factor Mult_Div_Mod_Quad Multiple_Factors
Rule 63    Multiple_Factors -> DIVIDE_SIGN Push_Divide_Sign Factor Mult_Div_Mod_Quad Multiple_Factors
Rule 64    Multiple_Factors -> MOD_SIGN Push_Mod_Sign Factor Mult_Div_Mod_Quad Multiple_Factors
Rule 65    Multiple_Factors -> Epsilon
Rule 66    Mult_Div_Mod_Quad -> <empty>
Rule 67    Push_Times_Sign -> <empty>
Rule 68    Push_Divide_Sign -> <empty>
Rule 69    Push_Mod_Sign -> <empty>
Rule 70    Factor -> PAR_OPEN Push_False_Bottom Exp PAR_CLOSE Pop_False_Bottom
Rule 71    Factor -> Var_Cte
Rule 72    Push_False_Bottom -> <empty>
Rule 73    Pop_False_Bottom -> <empty>
Rule 74    Var_Cte -> INT_CONST Save_Int_Const
Rule 75    Var_Cte -> MINUS_SIGN INT_CONST Save_Neg_Int_Const
Rule 76    Var_Cte -> FLOAT_CONST Save_Float_Const
Rule 77    Var_Cte -> MINUS_SIGN FLOAT_CONST Save_Neg_Float_Const
Rule 78    Var_Cte -> BOOL_CONST Save_Bool_Const
Rule 79    Var_Cte -> STRING_CONST Save_String_Const
Rule 80    Var_Cte -> ID Get_Id_Value
Rule 81    Save_Int_Const -> <empty>
Rule 82    Save_Neg_Int_Const -> <empty>
Rule 83    Save_Float_Const -> <empty>
Rule 84    Save_Neg_Float_Const -> <empty>
Rule 85    Save_Bool_Const -> <empty>
Rule 86    Save_String_Const -> <empty>
Rule 87    Get_Id_Value -> <empty>
Rule 88    Epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 36
ASSIGN               : 17 22
BLACK                : 
BLOCK_COMMENT        : 
BLUE                 : 
BOOL                 : 20
BOOL_CONST           : 78
CIRCLE               : 
COMMA                : 
COMMENT              : 
CURLYB_CLOSE         : 4
CURLYB_OPEN          : 4
CYAN                 : 
DIFF                 : 26
DIVIDE_SIGN          : 63
DRAW                 : 
EIF                  : 
ELSE                 : 
EQUAL                : 25
FLOAT                : 19
FLOAT_CONST          : 76 77
FUNC                 : 
GRAY                 : 
GREATER              : 47
GREATER_EQUAL        : 48
GREEN                : 
ID                   : 16 17 22 80
IF                   : 
INPUT                : 
INT                  : 18
INT_CONST            : 74 75
LESS                 : 45
LESS_EQUAL           : 46
LINE                 : 
MAGENTA              : 
MINUS_SIGN           : 56 75 77
MOD_SIGN             : 64
NOT                  : 41
OR                   : 31
ORANGE               : 
PAR_CLOSE            : 2 11 12 70
PAR_OPEN             : 2 11 12 70
PINK                 : 
PLAY                 : 2
PLUS_SIGN            : 55
POINT                : 
POLYGON              : 
PRINT                : 11
PURPLE               : 
RECTANGLE            : 
RED                  : 
SEMICOLON            : 11 16 17 22
SQRB_CLOSE           : 
SQRB_OPEN            : 
SQUARE               : 
STRING               : 21
STRING_CONST         : 79
TIMES_SIGN           : 62
TRIANGLE             : 
WHILE                : 12
WHITE                : 
YELLOW               : 
error                : 

Nonterminals, with rules where they appear

And_Quad             : 35 36
Assignment           : 9
Declare_Var          : 8
Epsilon              : 6 32 37 57 65
Equity_Quad          : 25 26
Exp                  : 11 12 17 22 70
Expression           : 44 45 45 46 46 47 47 48 48
Factor               : 61 62 63 64
Fill_While_Quads     : 12
Get_Id_Value         : 80
Logical_And          : 30 31
Logical_Not          : 35 36
Logical_Or           : 24 25 25 26 26
Mult_Div_Mod_Quad    : 61 62 63 64
Multiple_Ands        : 30 31
Multiple_Factors     : 61 62 63 64
Multiple_Nots        : 35 36
Multiple_Statements  : 4 5
Multiple_Terms       : 54 55 56
Not_Quad             : 41
Obi                  : 0
Or_Quad              : 30 31
Play                 : 1
Play_Init            : 2
Pop_False_Bottom     : 70
Print                : 7
Push_And             : 36
Push_Assign          : 17 22
Push_Diff            : 26
Push_Divide_Sign     : 63
Push_Equal           : 25
Push_False_Bottom    : 70
Push_Greater         : 47
Push_Greater_Equal   : 48
Push_Less            : 45
Push_Less_Equal      : 46
Push_Minus_Sign      : 56
Push_Mod_Sign        : 64
Push_Not             : 41
Push_Or              : 31
Push_Plus_Sign       : 55
Push_Times_Sign      : 62
Push_While_Jump      : 12
Relational           : 40 41
Relational_Quad      : 45 46 47 48
Save_Bool_Const      : 78
Save_Float_Const     : 76
Save_Int_Const       : 74
Save_Neg_Float_Const : 77
Save_Neg_Int_Const   : 75
Save_String_Const    : 79
Statement            : 5
Statements_Block     : 2 12
Sum_Sub_Quad         : 54 55 56
Term                 : 54 55 56
Type                 : 16 17
Var_Cte              : 71
While_Loop           : 10
While_Quad           : 12

Parsing method: LALR

state 0

    (0) S' -> . Obi
    (1) Obi -> . Play
    (2) Play -> . PLAY Play_Init PAR_OPEN PAR_CLOSE Statements_Block

    PLAY            shift and go to state 3

    Play                           shift and go to state 1
    Obi                            shift and go to state 2

state 1

    (1) Obi -> Play .

    $end            reduce using rule 1 (Obi -> Play .)


state 2

    (0) S' -> Obi .



state 3

    (2) Play -> PLAY . Play_Init PAR_OPEN PAR_CLOSE Statements_Block
    (3) Play_Init -> .

    PAR_OPEN        reduce using rule 3 (Play_Init -> .)

    Play_Init                      shift and go to state 4

state 4

    (2) Play -> PLAY Play_Init . PAR_OPEN PAR_CLOSE Statements_Block

    PAR_OPEN        shift and go to state 5


state 5

    (2) Play -> PLAY Play_Init PAR_OPEN . PAR_CLOSE Statements_Block

    PAR_CLOSE       shift and go to state 6


state 6

    (2) Play -> PLAY Play_Init PAR_OPEN PAR_CLOSE . Statements_Block
    (4) Statements_Block -> . CURLYB_OPEN Multiple_Statements CURLYB_CLOSE

    CURLYB_OPEN     shift and go to state 8

    Statements_Block               shift and go to state 7

state 7

    (2) Play -> PLAY Play_Init PAR_OPEN PAR_CLOSE Statements_Block .

    $end            reduce using rule 2 (Play -> PLAY Play_Init PAR_OPEN PAR_CLOSE Statements_Block .)


state 8

    (4) Statements_Block -> CURLYB_OPEN . Multiple_Statements CURLYB_CLOSE
    (5) Multiple_Statements -> . Statement Multiple_Statements
    (6) Multiple_Statements -> . Epsilon
    (7) Statement -> . Print
    (8) Statement -> . Declare_Var
    (9) Statement -> . Assignment
    (10) Statement -> . While_Loop
    (88) Epsilon -> .
    (11) Print -> . PRINT PAR_OPEN Exp PAR_CLOSE SEMICOLON
    (16) Declare_Var -> . Type ID SEMICOLON
    (17) Declare_Var -> . Type ID ASSIGN Push_Assign Exp SEMICOLON
    (22) Assignment -> . ID ASSIGN Push_Assign Exp SEMICOLON
    (12) While_Loop -> . WHILE Push_While_Jump PAR_OPEN Exp PAR_CLOSE While_Quad Statements_Block Fill_While_Quads
    (18) Type -> . INT
    (19) Type -> . FLOAT
    (20) Type -> . BOOL
    (21) Type -> . STRING

    CURLYB_CLOSE    reduce using rule 88 (Epsilon -> .)
    PRINT           shift and go to state 12
    ID              shift and go to state 19
    WHILE           shift and go to state 10
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 16

    Multiple_Statements            shift and go to state 15
    While_Loop                     shift and go to state 17
    Epsilon                        shift and go to state 14
    Declare_Var                    shift and go to state 18
    Statement                      shift and go to state 11
    Assignment                     shift and go to state 23
    Print                          shift and go to state 9
    Type                           shift and go to state 13

state 9

    (7) Statement -> Print .

    PRINT           reduce using rule 7 (Statement -> Print .)
    ID              reduce using rule 7 (Statement -> Print .)
    WHILE           reduce using rule 7 (Statement -> Print .)
    INT             reduce using rule 7 (Statement -> Print .)
    FLOAT           reduce using rule 7 (Statement -> Print .)
    BOOL            reduce using rule 7 (Statement -> Print .)
    STRING          reduce using rule 7 (Statement -> Print .)
    CURLYB_CLOSE    reduce using rule 7 (Statement -> Print .)


state 10

    (12) While_Loop -> WHILE . Push_While_Jump PAR_OPEN Exp PAR_CLOSE While_Quad Statements_Block Fill_While_Quads
    (13) Push_While_Jump -> .

    PAR_OPEN        reduce using rule 13 (Push_While_Jump -> .)

    Push_While_Jump                shift and go to state 24

state 11

    (5) Multiple_Statements -> Statement . Multiple_Statements
    (5) Multiple_Statements -> . Statement Multiple_Statements
    (6) Multiple_Statements -> . Epsilon
    (7) Statement -> . Print
    (8) Statement -> . Declare_Var
    (9) Statement -> . Assignment
    (10) Statement -> . While_Loop
    (88) Epsilon -> .
    (11) Print -> . PRINT PAR_OPEN Exp PAR_CLOSE SEMICOLON
    (16) Declare_Var -> . Type ID SEMICOLON
    (17) Declare_Var -> . Type ID ASSIGN Push_Assign Exp SEMICOLON
    (22) Assignment -> . ID ASSIGN Push_Assign Exp SEMICOLON
    (12) While_Loop -> . WHILE Push_While_Jump PAR_OPEN Exp PAR_CLOSE While_Quad Statements_Block Fill_While_Quads
    (18) Type -> . INT
    (19) Type -> . FLOAT
    (20) Type -> . BOOL
    (21) Type -> . STRING

    CURLYB_CLOSE    reduce using rule 88 (Epsilon -> .)
    PRINT           shift and go to state 12
    ID              shift and go to state 19
    WHILE           shift and go to state 10
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 16

    Multiple_Statements            shift and go to state 25
    While_Loop                     shift and go to state 17
    Epsilon                        shift and go to state 14
    Declare_Var                    shift and go to state 18
    Statement                      shift and go to state 11
    Assignment                     shift and go to state 23
    Print                          shift and go to state 9
    Type                           shift and go to state 13

state 12

    (11) Print -> PRINT . PAR_OPEN Exp PAR_CLOSE SEMICOLON

    PAR_OPEN        shift and go to state 26


state 13

    (16) Declare_Var -> Type . ID SEMICOLON
    (17) Declare_Var -> Type . ID ASSIGN Push_Assign Exp SEMICOLON

    ID              shift and go to state 27


state 14

    (6) Multiple_Statements -> Epsilon .

    CURLYB_CLOSE    reduce using rule 6 (Multiple_Statements -> Epsilon .)


state 15

    (4) Statements_Block -> CURLYB_OPEN Multiple_Statements . CURLYB_CLOSE

    CURLYB_CLOSE    shift and go to state 28


state 16

    (21) Type -> STRING .

    ID              reduce using rule 21 (Type -> STRING .)


state 17

    (10) Statement -> While_Loop .

    PRINT           reduce using rule 10 (Statement -> While_Loop .)
    ID              reduce using rule 10 (Statement -> While_Loop .)
    WHILE           reduce using rule 10 (Statement -> While_Loop .)
    INT             reduce using rule 10 (Statement -> While_Loop .)
    FLOAT           reduce using rule 10 (Statement -> While_Loop .)
    BOOL            reduce using rule 10 (Statement -> While_Loop .)
    STRING          reduce using rule 10 (Statement -> While_Loop .)
    CURLYB_CLOSE    reduce using rule 10 (Statement -> While_Loop .)


state 18

    (8) Statement -> Declare_Var .

    PRINT           reduce using rule 8 (Statement -> Declare_Var .)
    ID              reduce using rule 8 (Statement -> Declare_Var .)
    WHILE           reduce using rule 8 (Statement -> Declare_Var .)
    INT             reduce using rule 8 (Statement -> Declare_Var .)
    FLOAT           reduce using rule 8 (Statement -> Declare_Var .)
    BOOL            reduce using rule 8 (Statement -> Declare_Var .)
    STRING          reduce using rule 8 (Statement -> Declare_Var .)
    CURLYB_CLOSE    reduce using rule 8 (Statement -> Declare_Var .)


state 19

    (22) Assignment -> ID . ASSIGN Push_Assign Exp SEMICOLON

    ASSIGN          shift and go to state 29


state 20

    (18) Type -> INT .

    ID              reduce using rule 18 (Type -> INT .)


state 21

    (19) Type -> FLOAT .

    ID              reduce using rule 19 (Type -> FLOAT .)


state 22

    (20) Type -> BOOL .

    ID              reduce using rule 20 (Type -> BOOL .)


state 23

    (9) Statement -> Assignment .

    PRINT           reduce using rule 9 (Statement -> Assignment .)
    ID              reduce using rule 9 (Statement -> Assignment .)
    WHILE           reduce using rule 9 (Statement -> Assignment .)
    INT             reduce using rule 9 (Statement -> Assignment .)
    FLOAT           reduce using rule 9 (Statement -> Assignment .)
    BOOL            reduce using rule 9 (Statement -> Assignment .)
    STRING          reduce using rule 9 (Statement -> Assignment .)
    CURLYB_CLOSE    reduce using rule 9 (Statement -> Assignment .)


state 24

    (12) While_Loop -> WHILE Push_While_Jump . PAR_OPEN Exp PAR_CLOSE While_Quad Statements_Block Fill_While_Quads

    PAR_OPEN        shift and go to state 30


state 25

    (5) Multiple_Statements -> Statement Multiple_Statements .

    CURLYB_CLOSE    reduce using rule 5 (Multiple_Statements -> Statement Multiple_Statements .)


state 26

    (11) Print -> PRINT PAR_OPEN . Exp PAR_CLOSE SEMICOLON
    (24) Exp -> . Logical_Or
    (25) Exp -> . Logical_Or EQUAL Push_Equal Logical_Or Equity_Quad
    (26) Exp -> . Logical_Or DIFF Push_Diff Logical_Or Equity_Quad
    (30) Logical_Or -> . Logical_And Or_Quad Multiple_Ands
    (35) Logical_And -> . Logical_Not And_Quad Multiple_Nots
    (40) Logical_Not -> . Relational
    (41) Logical_Not -> . NOT Push_Not Relational Not_Quad
    (44) Relational -> . Expression
    (45) Relational -> . Expression LESS Push_Less Expression Relational_Quad
    (46) Relational -> . Expression LESS_EQUAL Push_Less_Equal Expression Relational_Quad
    (47) Relational -> . Expression GREATER Push_Greater Expression Relational_Quad
    (48) Relational -> . Expression GREATER_EQUAL Push_Greater_Equal Expression Relational_Quad
    (54) Expression -> . Term Sum_Sub_Quad Multiple_Terms
    (61) Term -> . Factor Mult_Div_Mod_Quad Multiple_Factors
    (70) Factor -> . PAR_OPEN Push_False_Bottom Exp PAR_CLOSE Pop_False_Bottom
    (71) Factor -> . Var_Cte
    (74) Var_Cte -> . INT_CONST Save_Int_Const
    (75) Var_Cte -> . MINUS_SIGN INT_CONST Save_Neg_Int_Const
    (76) Var_Cte -> . FLOAT_CONST Save_Float_Const
    (77) Var_Cte -> . MINUS_SIGN FLOAT_CONST Save_Neg_Float_Const
    (78) Var_Cte -> . BOOL_CONST Save_Bool_Const
    (79) Var_Cte -> . STRING_CONST Save_String_Const
    (80) Var_Cte -> . ID Get_Id_Value

    NOT             shift and go to state 47
    PAR_OPEN        shift and go to state 31
    INT_CONST       shift and go to state 35
    MINUS_SIGN      shift and go to state 46
    FLOAT_CONST     shift and go to state 32
    BOOL_CONST      shift and go to state 37
    STRING_CONST    shift and go to state 34
    ID              shift and go to state 45

    Factor                         shift and go to state 39
    Relational                     shift and go to state 33
    Logical_Not                    shift and go to state 36
    Term                           shift and go to state 38
    Var_Cte                        shift and go to state 40
    Logical_Or                     shift and go to state 41
    Logical_And                    shift and go to state 42
    Exp                            shift and go to state 43
    Expression                     shift and go to state 44

state 27

    (16) Declare_Var -> Type ID . SEMICOLON
    (17) Declare_Var -> Type ID . ASSIGN Push_Assign Exp SEMICOLON

    SEMICOLON       shift and go to state 48
    ASSIGN          shift and go to state 49


state 28

    (4) Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .

    PRINT           reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    ID              reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    WHILE           reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    INT             reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    FLOAT           reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    BOOL            reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    STRING          reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    CURLYB_CLOSE    reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)
    $end            reduce using rule 4 (Statements_Block -> CURLYB_OPEN Multiple_Statements CURLYB_CLOSE .)


state 29

    (22) Assignment -> ID ASSIGN . Push_Assign Exp SEMICOLON
    (23) Push_Assign -> .

    NOT             reduce using rule 23 (Push_Assign -> .)
    PAR_OPEN        reduce using rule 23 (Push_Assign -> .)
    INT_CONST       reduce using rule 23 (Push_Assign -> .)
    MINUS_SIGN      reduce using rule 23 (Push_Assign -> .)
    FLOAT_CONST     reduce using rule 23 (Push_Assign -> .)
    BOOL_CONST      reduce using rule 23 (Push_Assign -> .)
    STRING_CONST    reduce using rule 23 (Push_Assign -> .)
    ID              reduce using rule 23 (Push_Assign -> .)

    Push_Assign                    shift and go to state 50

state 30

    (12) While_Loop -> WHILE Push_While_Jump PAR_OPEN . Exp PAR_CLOSE While_Quad Statements_Block Fill_While_Quads
    (24) Exp -> . Logical_Or
    (25) Exp -> . Logical_Or EQUAL Push_Equal Logical_Or Equity_Quad
    (26) Exp -> . Logical_Or DIFF Push_Diff Logical_Or Equity_Quad
    (30) Logical_Or -> . Logical_And Or_Quad Multiple_Ands
    (35) Logical_And -> . Logical_Not And_Quad Multiple_Nots
    (40) Logical_Not -> . Relational
    (41) Logical_Not -> . NOT Push_Not Relational Not_Quad
    (44) Relational -> . Expression
    (45) Relational -> . Expression LESS Push_Less Expression Relational_Quad
    (46) Relational -> . Expression LESS_EQUAL Push_Less_Equal Expression Relational_Quad
    (47) Relational -> . Expression GREATER Push_Greater Expression Relational_Quad
    (48) Relational -> . Expression GREATER_EQUAL Push_Greater_Equal Expression Relational_Quad
    (54) Expression -> . Term Sum_Sub_Quad Multiple_Terms
    (61) Term -> . Factor Mult_Div_Mod_Quad Multiple_Factors
    (70) Factor -> . PAR_OPEN Push_False_Bottom Exp PAR_CLOSE Pop_False_Bottom
    (71) Factor -> . Var_Cte
    (74) Var_Cte -> . INT_CONST Save_Int_Const
    (75) Var_Cte -> . MINUS_SIGN INT_CONST Save_Neg_Int_Const
    (76) Var_Cte -> . FLOAT_CONST Save_Float_Const
    (77) Var_Cte -> . MINUS_SIGN FLOAT_CONST Save_Neg_Float_Const
    (78) Var_Cte -> . BOOL_CONST Save_Bool_Const
    (79) Var_Cte -> . STRING_CONST Save_String_Const
    (80) Var_Cte -> . ID Get_Id_Value

    NOT             shift and go to state 47
    PAR_OPEN        shift and go to state 31
    INT_CONST       shift and go to state 35
    MINUS_SIGN      shift and go to state 46
    FLOAT_CONST     shift and go to state 32
    BOOL_CONST      shift and go to state 37
    STRING_CONST    shift and go to state 34
    ID              shift and go to state 45

    Exp                            shift and go to state 51
    Factor                         shift and go to state 39
    Relational                     shift and go to state 33
    Logical_Not                    shift and go to state 36
    Term                           shift and go to state 38
    Var_Cte                        shift and go to state 40
    Logical_Or                     shift and go to state 41
    Logical_And                    shift and go to state 42
    Expression                     shift and go to state 44

state 31

    (70) Factor -> PAR_OPEN . Push_False_Bottom Exp PAR_CLOSE Pop_False_Bottom
    (72) Push_False_Bottom -> .

    NOT             reduce using rule 72 (Push_False_Bottom -> .)
    PAR_OPEN        reduce using rule 72 (Push_False_Bottom -> .)
    INT_CONST       reduce using rule 72 (Push_False_Bottom -> .)
    MINUS_SIGN      reduce using rule 72 (Push_False_Bottom -> .)
    FLOAT_CONST     reduce using rule 72 (Push_False_Bottom -> .)
    BOOL_CONST      reduce using rule 72 (Push_False_Bottom -> .)
    STRING_CONST    reduce using rule 72 (Push_False_Bottom -> .)
    ID              reduce using rule 72 (Push_False_Bottom -> .)

    Push_False_Bottom              shift and go to state 52

state 32

    (76) Var_Cte -> FLOAT_CONST . Save_Float_Const
    (83) Save_Float_Const -> .

    TIMES_SIGN      reduce using rule 83 (Save_Float_Const -> .)
    DIVIDE_SIGN     reduce using rule 83 (Save_Float_Const -> .)
    MOD_SIGN        reduce using rule 83 (Save_Float_Const -> .)
    PLUS_SIGN       reduce using rule 83 (Save_Float_Const -> .)
    MINUS_SIGN      reduce using rule 83 (Save_Float_Const -> .)
    LESS            reduce using rule 83 (Save_Float_Const -> .)
    LESS_EQUAL      reduce using rule 83 (Save_Float_Const -> .)
    GREATER         reduce using rule 83 (Save_Float_Const -> .)
    GREATER_EQUAL   reduce using rule 83 (Save_Float_Const -> .)
    AND             reduce using rule 83 (Save_Float_Const -> .)
    OR              reduce using rule 83 (Save_Float_Const -> .)
    EQUAL           reduce using rule 83 (Save_Float_Const -> .)
    DIFF            reduce using rule 83 (Save_Float_Const -> .)
    PAR_CLOSE       reduce using rule 83 (Save_Float_Const -> .)
    SEMICOLON       reduce using rule 83 (Save_Float_Const -> .)

    Save_Float_Const               shift and go to state 53

state 33

    (40) Logical_Not -> Relational .

    AND             reduce using rule 40 (Logical_Not -> Relational .)
    OR              reduce using rule 40 (Logical_Not -> Relational .)
    PAR_CLOSE       reduce using rule 40 (Logical_Not -> Relational .)
    SEMICOLON       reduce using rule 40 (Logical_Not -> Relational .)
    EQUAL           reduce using rule 40 (Logical_Not -> Relational .)
    DIFF            reduce using rule 40 (Logical_Not -> Relational .)


state 34

    (79) Var_Cte -> STRING_CONST . Save_String_Const
    (86) Save_String_Const -> .

    TIMES_SIGN      reduce using rule 86 (Save_String_Const -> .)
    DIVIDE_SIGN     reduce using rule 86 (Save_String_Const -> .)
    MOD_SIGN        reduce using rule 86 (Save_String_Const -> .)
    PLUS_SIGN       reduce using rule 86 (Save_String_Const -> .)
    MINUS_SIGN      reduce using rule 86 (Save_String_Const -> .)
    LESS            reduce using rule 86 (Save_String_Const -> .)
    LESS_EQUAL      reduce using rule 86 (Save_String_Const -> .)
    GREATER         reduce using rule 86 (Save_String_Const -> .)
    GREATER_EQUAL   reduce using rule 86 (Save_String_Const -> .)
    AND             reduce using rule 86 (Save_String_Const -> .)
    OR              reduce using rule 86 (Save_String_Const -> .)
    EQUAL           reduce using rule 86 (Save_String_Const -> .)
    DIFF            reduce using rule 86 (Save_String_Const -> .)
    PAR_CLOSE       reduce using rule 86 (Save_String_Const -> .)
    SEMICOLON       reduce using rule 86 (Save_String_Const -> .)

    Save_String_Const              shift and go to state 54

state 35

    (74) Var_Cte -> INT_CONST . Save_Int_Const
    (81) Save_Int_Const -> .

    TIMES_SIGN      reduce using rule 81 (Save_Int_Const -> .)
    DIVIDE_SIGN     reduce using rule 81 (Save_Int_Const -> .)
    MOD_SIGN        reduce using rule 81 (Save_Int_Const -> .)
    PLUS_SIGN       reduce using rule 81 (Save_Int_Const -> .)
    MINUS_SIGN      reduce using rule 81 (Save_Int_Const -> .)
    LESS            reduce using rule 81 (Save_Int_Const -> .)
    LESS_EQUAL      reduce using rule 81 (Save_Int_Const -> .)
    GREATER         reduce using rule 81 (Save_Int_Const -> .)
    GREATER_EQUAL   reduce using rule 81 (Save_Int_Const -> .)
    AND             reduce using rule 81 (Save_Int_Const -> .)
    OR              reduce using rule 81 (Save_Int_Const -> .)
    EQUAL           reduce using rule 81 (Save_Int_Const -> .)
    DIFF            reduce using rule 81 (Save_Int_Const -> .)
    PAR_CLOSE       reduce using rule 81 (Save_Int_Const -> .)
    SEMICOLON       reduce using rule 81 (Save_Int_Const -> .)

    Save_Int_Const                 shift and go to state 55

state 36

    (35) Logical_And -> Logical_Not . And_Quad Multiple_Nots
    (38) And_Quad -> .

    AND             reduce using rule 38 (And_Quad -> .)
    OR              reduce using rule 38 (And_Quad -> .)
    EQUAL           reduce using rule 38 (And_Quad -> .)
    DIFF            reduce using rule 38 (And_Quad -> .)
    PAR_CLOSE       reduce using rule 38 (And_Quad -> .)
    SEMICOLON       reduce using rule 38 (And_Quad -> .)

    And_Quad                       shift and go to state 56

state 37

    (78) Var_Cte -> BOOL_CONST . Save_Bool_Const
    (85) Save_Bool_Const -> .

    TIMES_SIGN      reduce using rule 85 (Save_Bool_Const -> .)
    DIVIDE_SIGN     reduce using rule 85 (Save_Bool_Const -> .)
    MOD_SIGN        reduce using rule 85 (Save_Bool_Const -> .)
    PLUS_SIGN       reduce using rule 85 (Save_Bool_Const -> .)
    MINUS_SIGN      reduce using rule 85 (Save_Bool_Const -> .)
    LESS            reduce using rule 85 (Save_Bool_Const -> .)
    LESS_EQUAL      reduce using rule 85 (Save_Bool_Const -> .)
    GREATER         reduce using rule 85 (Save_Bool_Const -> .)
    GREATER_EQUAL   reduce using rule 85 (Save_Bool_Const -> .)
    AND             reduce using rule 85 (Save_Bool_Const -> .)
    OR              reduce using rule 85 (Save_Bool_Const -> .)
    EQUAL           reduce using rule 85 (Save_Bool_Const -> .)
    DIFF            reduce using rule 85 (Save_Bool_Const -> .)
    PAR_CLOSE       reduce using rule 85 (Save_Bool_Const -> .)
    SEMICOLON       reduce using rule 85 (Save_Bool_Const -> .)

    Save_Bool_Const                shift and go to state 57

state 38

    (54) Expression -> Term . Sum_Sub_Quad Multiple_Terms
    (58) Sum_Sub_Quad -> .
